--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />    <link rel="icon" type="image/png" href="/src/assets/logo-app.png" />
+    <meta charset="UTF-8" />    <link rel="icon" type="image/svg+xml" href="/src/assets/logo2.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thinkchat</title>
   </head>
