--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />    <link rel="icon" type="image/svg+xml" href="/src/assets/logo2.svg" />
+    <meta charset="UTF-8" />    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/logo-thinkchat.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/logo-thinkchat.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/logo-thinkchat.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thinkchat</title>
   </head>
